--- a/src/OC/PlatformBundle/Resources/views/Advert/form.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/form.html.twig
@@ -9,5 +9,9 @@
 {# On laisse vide la vue pour l'instant, on la comblera plus tard
    lorsqu'on saura afficher un formulaire. #}
 <div class="well">
-  Ici se trouvera le formulaire.
+    <h3>Formulaire d'annonce</h3>
+
+    <div class="well">
+        {{ form(form) }}
+    </div>
 </div>
