--- a/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/view.html.twig
@@ -10,7 +10,7 @@
 
     {# On vérifie qu'une image soit bien associée à l'annonce #}
     {% if advert.image is not null %}
-        <img src="{{ advert.image.url }}" alt="{{ advert.image.alt }}">
+        <img src="{{ asset(advert.image.webPath) }}" alt="{{ advert.image.alt }}">
     {% endif %}
 
   <h2>{{ advert.title }}</h2>
@@ -29,12 +29,15 @@
 
     <div class="clear-fix">
         {% if not advert.categories.empty %}
-            <p>
+            <div>
                 Cette annonce est parue dans les categories suivants :
-                {% for category in advert.categories %}
-                    {{ category.name }}{% if not loop.last %}, {% endif %}
-                {% endfor %}
-            </p>
+                <ul>
+                    {% for category in advert.categories %}
+                        <li>{{ category.name }}{% if not loop.last %}, {% endif %}</li>
+                    {% endfor %}
+                </ul>
+
+            </div>
         {% endif %}
     </div>
 
