--- a/src/OC/PlatformBundle/Resources/views/Advert/form.html.twig
+++ b/src/OC/PlatformBundle/Resources/views/Advert/form.html.twig
@@ -1,17 +1,103 @@
 {# src/OC/PlatformBundle/Resources/views/Advert/form.html.twig #}
 
-{# Cette vue n'hérite de personne, elle sera incluse par d'autres vues qui,
-   elles, hériteront probablement du layout. Je dis « probablement » car,
-   ici pour cette vue, on n'en sait rien et c'est une info qui ne nous concerne pas. #}
-
 <h3>Formulaire d'annonce</h3>
 
-{# On laisse vide la vue pour l'instant, on la comblera plus tard
-   lorsqu'on saura afficher un formulaire. #}
 <div class="well">
-    <h3>Formulaire d'annonce</h3>
+    {{ form_start(form, {'attr': {'class': 'form-horizontal'}}) }}
 
-    <div class="well">
-        {{ form(form) }}
+    {# Les erreurs générales du formulaire. #}
+    {{ form_errors(form) }}
+
+    <div class="form-group">
+        {# Génération du label. #}
+        {{ form_label(form.title, "Titre de l'annonce", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+
+        {# Affichage des erreurs pour ce champ précis. #}
+        {{ form_errors(form.title) }}
+
+        <div class="col-sm-4">
+            {# Génération de l'input. #}
+            {{ form_widget(form.title, {'attr': {'class': 'form-control'}}) }}
+        </div>
     </div>
+
+    {# Idem pour un autre champ. #}
+    <div class="form-group">
+        {{ form_label(form.content, "Contenu de l'annonce", {'label_attr': {'class': 'col-sm-3 control-label'}}) }}
+        {{ form_errors(form.title) }}
+        <div class="col-sm-4">
+            {{ form_widget(form.content, {'attr': {'class': 'form-control'}}) }}
+        </div>
+    </div>
+
+    {# Génération du label + error + widget pour un champ #}
+
+
+    {{ form_row(form.author) }}
+    {{ form_row(form.date) }}
+    {{ form_row(form.published) }}
+    {{ form_row(form.image) }}
+    {{ form_row(form.categories) }}
+
+    {# Pour le bouton, pas de label ni d'erreur, on affiche juste le widget #}
+    {{ form_widget(form.save, {'attr': {'class': 'btn btn-primary'}}) }}
+
+    {# Génération automatique des champs pas encore écrits.
+       Dans cet exemple, ce serait le champ CSRF (géré automatiquement par Symfony !)
+       et tous les champs cachés (type « hidden »). #}
+    {{ form_rest(form) }}
+
+    {# Fermeture de la balise <form> du formulaire HTML #}
+    {{ form_end(form) }}
 </div>
+
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+
+<script type = "text/javascript">
+
+    $(document).ready(function(){
+
+        var $container = $('div#oc_platformbundle_advert_categories');
+
+        var $addLink = $('<a href="#" id="add_category" class="btn btn-default">Ajouter une categorie</a>');
+        $container.append($addLink);
+
+        $addLink.click(function(e){
+            addCategory($container);
+            e.preventDefault();
+            return false;
+        });
+
+        var index = $container.find(':input').length;
+
+        if (index == 0){
+            addCategory($container);
+        }
+        else{
+            $container.children('div').each(function(){
+                addDeleteLink($(this));
+            });
+        }
+
+        function addCategory($container){
+            var $prototype = $($container.attr('data-prototype').replace(/__name__label__/g, 'Catégorie n°' + (index+1)).replace(/__name__/g, index));
+
+            addDeleteLink($prototype);
+            $container.append($prototype);
+
+            index++;
+        }
+
+        function addDeleteLink($prototype){
+            $deleteLink = $('<a href="#" class="btn btn-danger">Supprimer</a>');
+
+            $prototype.append($deleteLink);
+
+            $deleteLink.click(function(e){
+                $prototype.remove();
+                e.preventDefault();
+                return false;
+            });
+        }
+    })
+</script>
